complete angular componet

--- a/AngularJs.Demo/Views/Home/Index.cshtml
+++ b/AngularJs.Demo/Views/Home/Index.cshtml
@@ -4,9 +4,13 @@
     <script src="~/Client/Scripts/atTheAlbum.js"></script>
     <script src="~/Client/Scripts/ListAlbum.js"></script>
     <script src="~/Client/Scripts/DetailsController.js"></script>
+    <script src="~/Client/Scripts/albumService.js"></script>
+    <script src="~/Client/Scripts/EditController.js"></script>
     }
 
+<div>
 
-<div data-ng-app="atTheAlbum">
+</div>
+<div data-ng-app="atTheAlbum" style="margin-top:50px;">
     <ng-view></ng-view>
 </div>
