--- a/AngularJs.Demo/Client/Views/details.html
+++ b/AngularJs.Demo/Client/Views/details.html
@@ -9,4 +9,19 @@
     <div>
         Genre: {{album.GenreName}}
     </div>
+    <button class="btn btn-default" ng-click="edit()" onclick="javascript:$('#myModal').modal('show');">Edit</button>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel" style="text-align:center">Create Album</h4>
+                </div>
+                <div class="modal-body">
+                    <div ng-include="'/Client/views/edit.html'"></div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal -->
+
+    </div>
 </div>
