--- a/AngularJs.Demo/Client/Views/list.html
+++ b/AngularJs.Demo/Client/Views/list.html
@@ -1,11 +1,39 @@
 ﻿<div ng-controller="ListController">
+
+    <!--<button class="btn btn-primary  btn-sm"
+            type="button"
+            onclick="javascript:$('#myModal').modal('show');">
+        Create
+    </button>-->
+
     <table>
         <tr ng-repeat="album in albums">
             <td>{{album.Title}}</td>
             <td>{{album.ArtistName}}</td>
             <td>
-                <a href="#!/details/{{album.AlbumId}}">Details</a>
+                <a class="btn btn-default" href="#!/details/{{album.AlbumId}}">Details</a>
+            </td>
+            <td>
+                <a class="btn btn-default" ng-click="delete(album)">Delete</a>
             </td>
         </tr>
     </table>
+    <button class="btn btn-default" ng-click="create()" onclick="javascript:$('#myModal').modal('show');">Create</button>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel" style="text-align:center">Create Album</h4>
+                </div>
+                <div class="modal-body">
+                    <div ng-include="'/Client/views/edit.html'"></div>
+                </div>
+                <!--<div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>-->
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal -->
+
+    </div>
 </div>
